# hs-bucket-histogram

./: bucket-histogram.cabal
Data/: BucketHistogram.hs
